--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <groupId>nl.verheulconsultants.monitorisp</groupId>
     <artifactId>monitorisp</artifactId>
     <packaging>war</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>0.1</version>
     <name>MonitorISP</name>
     <description></description>
 
