--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,6 @@
         
     <context-param>
         <param-name>configuration</param-name>
-        <param-value>development</param-value>
+        <param-value>deployment</param-value>
     </context-param>
 </web-app>
