--- a/pom.xml
+++ b/pom.xml
@@ -186,15 +186,26 @@
             </plugin>
         </plugins>
     </build>
+    
     <profiles>
         <profile>
             <id>sonar</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <properties>
-                <sonar.jdbc.url>jdbc:mysql://192.168.0.251:3306/sonar?useUnicode=true&amp;characterEncoding=utf8&amp;rewriteBatchedStatements=true</sonar.jdbc.url>
+                <!-- Optional URL to server. Default value is http://localhost:9000 -->
+                <sonar.host.url>
+                    http://192.168.0.251
+                </sonar.host.url>
+                <sonar.jdbc.url>
+                    jdbc:mysql://192.168.0.251:3306/sonar?useUnicode=true&amp;characterEncoding=utf8&amp;rewriteBatchedStatements=true
+                </sonar.jdbc.url>
                 <sonar.jdbc.username>sonar</sonar.jdbc.username>
                 <sonar.jdbc.password>sonar</sonar.jdbc.password>
             </properties>
         </profile>
     </profiles>
+
 
 </project>
