--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	version="2.5">
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://www.oracle.com/webfolder/technetwork/jsc/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
 
 	<display-name>monitorisp</display-name>
 
@@ -13,22 +13,22 @@
 		2) servlet specific <init-param> 
 		3) context specific <context-param>
 
-    The value might be either "development" (reloading when templates change) or 
-    "deployment". If no configuration is found, "development" is the default. -->
+		The value might be either "development" (reloading when templates change) or
+		"deployment". If no configuration is found, "development" is the default. -->
 
-    <filter>
-        <filter-name>wicket.monitorisp</filter-name>
-        <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
-        <init-param>
-            <param-name>applicationClassName</param-name>
-            <param-value>nl.verheulconsultants.monitorisp.ui.WicketApplication</param-value>
-        </init-param>
-    </filter>
+	<filter>
+		<filter-name>wicket.monitorisp</filter-name>
+		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+		<init-param>
+			<param-name>applicationClassName</param-name>
+			<param-value>nl.verheulconsultants.monitorisp.ui.WicketApplication</param-value>
+		</init-param>
+	</filter>
 
-    <filter-mapping>
-        <filter-name>wicket.monitorisp</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+	<filter-mapping>
+		<filter-name>wicket.monitorisp</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
         
     <context-param>
         <param-name>configuration</param-name>
