--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
 	 <dependency>
 	  <groupId>org.apache.wicket</groupId>
 	  <artifactId>wicket-extensions</artifactId>
-	  <version>10.0.0-M1-SNAPSHOT</version>
+	  <version>9.5.0</version>
 	  <type>jar</type>
 	 </dependency>
 	</dependencies>
@@ -213,17 +213,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<repositories>
-		<repository>
-			<id>Apache Nexus</id>
-			<url>https://repository.apache.org/content/repositories/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
 	</project>
