--- a/pom.xml
+++ b/pom.xml
@@ -182,12 +182,20 @@
 				<version>3.8.0</version>
 				<configuration>
 					<source>11</source>
-					<target>11</target>
+					<target>17</target>
 					<encoding>UTF-8</encoding>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
 				</configuration>
 			</plugin>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-war-plugin</artifactId>
+                                <version>3.3.2</version>
+                                <configuration>
+                                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                                </configuration>
+                        </plugin>
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
